// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validateForm A invalid field value 1`] = `
{
  "errorMessage": "Airtable view is required",
  "fields": {
    "base": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable base",
      "link": "https://airtable.com/api",
      "regex": /\\^app\\\\w\\{14\\}\\$/u,
      "value": "azerty",
    },
    "table": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable table",
      "regex": /\\^\\[\\\\w-\\]\\+\\$/u,
      "value": "",
    },
    "token": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable personal access token",
      "link": "https://airtable.com/create/tokens",
      "regex": /\\^pat\\[\\\\w\\.\\]\\{50,100\\}\\$/u,
      "value": "",
    },
    "view": {
      "isRequired": true,
      "isValid": false,
      "label": "Airtable view",
      "regex": /\\^\\[\\\\w-\\]\\+\\$/u,
      "value": "",
    },
    "wrap": {
      "isRequired": false,
      "isValid": true,
      "label": "Wrap api key",
      "link": "https://wrapapi.com/user/api",
      "regex": /\\^\\\\w\\{32\\}\\$/u,
      "value": "",
    },
  },
  "isTouched": false,
  "isValid": false,
}
`;

exports[`validateForm B valid form 1`] = `
{
  "errorMessage": "",
  "fields": {
    "base": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable base",
      "link": "https://airtable.com/api",
      "regex": /\\^app\\\\w\\{14\\}\\$/u,
      "value": "app1238479649646a",
    },
    "table": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable table",
      "regex": /\\^\\[\\\\w-\\]\\+\\$/u,
      "value": "my-table",
    },
    "token": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable personal access token",
      "link": "https://airtable.com/create/tokens",
      "regex": /\\^pat\\[\\\\w\\.\\]\\{50,100\\}\\$/u,
      "value": "pat12345654987123azdazdzadazdzadaz465465468479649646azd46az465azdazd",
    },
    "view": {
      "isRequired": true,
      "isValid": true,
      "label": "Airtable view",
      "regex": /\\^\\[\\\\w-\\]\\+\\$/u,
      "value": "my-view",
    },
    "wrap": {
      "isRequired": false,
      "isValid": true,
      "label": "Wrap api key",
      "link": "https://wrapapi.com/user/api",
      "regex": /\\^\\\\w\\{32\\}\\$/u,
      "value": "13246874kpohj4987_azdzad13546354",
    },
  },
  "isTouched": false,
  "isValid": true,
}
`;
